--- a/imperialismStyle.css
+++ b/imperialismStyle.css
@@ -169,7 +169,7 @@ a:hover {
 #aboutImperialism{
     position: absolute;
     width: 100vw;
-    height: 125vh;
+    height: 200vh;
     left: 0vw;
     top: 133vh;
     text-align: center;
@@ -183,7 +183,7 @@ a:hover {
     width: 100vw;
     height: 25vh;
     left: 0vw;
-    top: 258vh;
+    top: 333vh;
     text-align: center;
     font-size: 4em;
     background-color: rgb(49, 135, 233);
@@ -193,7 +193,7 @@ a:hover {
     width: 100vw;
     height: 100vh;
     left: 0vw;
-    top: 283vh;
+    top: 358vh;
     text-align: center;
     font-size: 1.5em;
     background-color: rgb(223, 219, 206);
@@ -216,7 +216,7 @@ a:hover {
     width: 100vw;
     height: 40vh;
     left: 0vw;
-    top: 383vh;
+    top: 458vh;
     background-color: rgb(0, 0, 0);
     text-align: center;
     color: white;
@@ -239,4 +239,30 @@ a:hover {
 .footerIcon:hover {
     color: gold;
     background-color: transparent;
+}
+
+#img{
+    position: absolute;
+    left: 10%;
+    bottom: 10%;
+    width: 80%;
+    height: 30%;
+    background-color: aqua;
+    transition: all 1s;
+}
+#info{
+    position: absolute;
+    left: 10%;
+    width: 80%;
+    height: 30%;
+    background-color: aqua;
+    transition: all 1s;
+}
+.imgContainer{
+    width: 100%;
+    height: 50%;
+    background-color: aqua;
+}
+.explainImg{
+    border: 2px solid black;
 }
