--- a/imperialismStyle.css
+++ b/imperialismStyle.css
@@ -29,28 +29,28 @@
     background-color: black;
 }
 #slide1{
-    left: 5.15%;
+    left: 5.15vw;
 }
 #slide2{
-    left: 30%;
+    left: 30vw;
 }
 #slide3{
-    left: 40%;
+    left: 40vw;
 }
 #slide4{
-    left: 50%;
+    left: 50vw;
 }
 #slide5{
-    left: 60%;
+    left: 60vw;
 }
 #slide6{
-    left: 70%;
+    left: 70vw;
 }
 #slide7{
-    left: 80%;
+    left: 80vw;
 }
 #slide8{
-    left: 90%;
+    right: 4.85vw;
 }
 
 html{
@@ -82,6 +82,7 @@ div{
     float: right;
     color: white;
     padding: 14px 35px;
+    transition: color 0.5s;
 }
 #navPosition:hover{
     color: gold;
@@ -239,6 +240,7 @@ a:hover {
     font-size: 2.25em;
     /*Specifies the spacing between each letter*/
     letter-spacing: 2px;
+    transition: color 0.5s;
 }
 .footerIcon:link {
     color: white;
@@ -260,7 +262,6 @@ a:hover {
     left: 10%;
     width: 80%;
     height: 30%;
-    background-color: aqua;
     transition: all 1s;
 }
 #info{
@@ -270,7 +271,6 @@ a:hover {
     bottom: 10%;
     width: 80%;
     height: 30%;
-    background-color: aqua;
     transition: all 1s;
 }
 .imgContainer{
@@ -298,7 +298,7 @@ a:hover {
 #copyright{
     position: absolute;
     left: 2.5%;
-    bottom: 2.5%;
+    bottom: 3.5%;
 }
 #tm{
     position: absolute;
@@ -330,4 +330,58 @@ a:hover {
 }
 #closeButton:hover{
     background-color: gold;
+}
+#answerText{
+    position: absolute;
+    text-align: center;
+    left: 10%;
+    width: 80%;
+    font-size: 3em;
+}
+#answerBlock{
+    position: absolute;
+    left: 10%;
+    height: 30%;
+    width: 80%;
+}
+#trivia{
+    position: absolute;
+    text-align: center;
+    left: 10%;
+    bottom: 10%;
+    width: 80%;
+    height: 30%;
+    font-size: 2em;
+}
+.choice{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    background-color: rgb(49, 135, 233);
+    border: 4px solid black;
+    transition: all 1s;
+}
+#choice1{
+    left: 0%;
+    top: 0%;
+}
+#choice2{
+    left: 50%;
+    top: 0%;
+}
+#choice3{
+    left: 0%;
+    top: 50%;
+}
+#choice4{
+    left: 50%;
+    top: 50%;
+}
+#mrD{
+    position: absolute;
+    right: 2%;
+    top: 1.5%;
+    width: 10%;
+    height: 20%;
+    border-radius: 10%;
 }
