--- a/imperialismStyle.css
+++ b/imperialismStyle.css
@@ -179,6 +179,7 @@ a:hover {
     top: 108vh;
     text-align: center;
     font-size: 4em;
+    text-decoration: underline;
     background-color: rgb(49, 135, 233);
 }
 #aboutImperialism{
@@ -201,6 +202,7 @@ a:hover {
     top: 333vh;
     text-align: center;
     font-size: 4em;
+    text-decoration: underline;
     background-color: rgb(49, 135, 233);
 }
 #timeline{
@@ -384,4 +386,14 @@ a:hover {
     width: 10%;
     height: 20%;
     border-radius: 10%;
+}
+#tooltip{
+    position: absolute;
+    width: 10vw;
+    border-radius: 10px;
+    color: white;
+    background-color: black;
+    border: 4px solid rgb(49, 135, 233);
+    display: none;
+    padding: 10px 10px;
 }
