--- a/imperialismStyle.css
+++ b/imperialismStyle.css
@@ -269,9 +269,9 @@ a:hover {
 #info{
     position: absolute;
     text-align: left;
-    left: 10%;
+    left: 17.5%;
     bottom: 10%;
-    width: 80%;
+    width: 65%;
     height: 30%;
     transition: all 1s;
 }
@@ -396,4 +396,32 @@ a:hover {
     border: 4px solid rgb(49, 135, 233);
     display: none;
     padding: 10px 10px;
+}
+#leftSlide{
+    position: absolute;
+    left: 10%;
+    bottom: 10%;
+    width: 5%;
+    height: 30%;
+    border-radius: 10px;
+    transition: background-color 1s;
+    background-color: rgb(49, 135, 233);
+    border: 0;
+}
+#rightSlide{
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+    width: 5%;
+    height: 30%;
+    border-radius: 10px;
+    transition: background-color 1s;
+    background-color: rgb(49, 135, 233);
+    border: 0;
+}
+#buttonIcon1{
+    font-size: 0.75em;
+}
+#buttonIcon2{
+    font-size: 0.75em;
 }
