--- a/imperialismStyle.css
+++ b/imperialismStyle.css
@@ -32,25 +32,31 @@
     left: 5.15vw;
 }
 #slide2{
-    left: 7.8vw;
+    left: 9.45vw;
 }
 #slide3{
-    left: 40vw;
-}
-#slide4{
     left: 50vw;
 }
+#slide4{
+    left: 45.7vw;
+}
 #slide5{
-    left: 60vw;
+    left: 59.525vw;
 }
 #slide6{
-    left: 70vw;
+    left: 67.275vw;
 }
 #slide7{
-    left: 80vw;
+    left: 71.6vw;
 }
 #slide8{
     right: 4.85vw;
+}
+#slide9{
+    left: 80.2vw;
+}
+#slide10{
+    left: 75.925vw;
 }
 
 html{
@@ -364,6 +370,8 @@ a:hover {
     background-color: rgb(49, 135, 233);
     border: 4px solid black;
     transition: all 1s;
+    padding-top: 15px;
+    font-size: 0.75em;
 }
 #choice1{
     left: 0%;
